Fix Scrollbar User, Assign Quiz To User, QuizQA

--- a/src/App.scss
+++ b/src/App.scss
@@ -83,4 +83,8 @@ body {
       }
     }
   }
+  
+  .app-content {
+    height: calc(100vh - 100px);
+  }
 }
